# surrealdb-spin

./: Cargo.toml  spin.toml
src/: lib.rs
