[package]
name = "surrealdb-spin"
authors = ["Frank Lyaruu <f.lyaruu@quin.nl>"]
description = "Surreal DB example for spin"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = [ "cdylib" ]

[dependencies]
# Useful crate to handle errors.
anyhow = "1"
# Crate to simplify working with bytes.
bytes = "1"
# General-purpose crate with common HTTP types.
http = "0.2"
# The Spin SDK.
spin-sdk = { git = "https://github.com/fermyon/spin", tag = "v1.4.1" }

simplehttp = {  git = "https://github.com/flyaruu/simplehttp" , features=["spin"], default-features=false }
surrealdb-http = { git = "https://github.com/flyaruu/surrealdb-http" }
serde = "1.0.171"
serde_json = "1.0.103"

[workspace]
